--- a/Test2/index.html
+++ b/Test2/index.html
@@ -45,7 +45,7 @@
 	</div><br>
 	<form role="form">
 		<div class="form-group">
-			<input type="checkbox">Select All
+			<input type="checkbox">Select All hello
 		</div>
 		<div class="form-group">
 			<ul ng-repeat ="x in product">
